added the favorite page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ flutter:
     - assets/photos/
     - assets/icons/
     - assets/photos_wilaya/
+    - assets/favorite_places/
+
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
