--- a/new_app/pubspec.yaml
+++ b/new_app/pubspec.yaml
@@ -45,9 +45,9 @@ dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
-  image_path: "assets/icon/icon.png"
+  image_path: "assets/logo/logo.ico"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
